--- a/src/scss/Includes/_icon-block.scss
+++ b/src/scss/Includes/_icon-block.scss
@@ -1,6 +1,7 @@
-.bat-icon-block{
+.bat-icon-block {
+  padding-top: 7rem;
   background-color: $grandis;
-  &__content-wrapper{
-   text-align: center;
+  &__content-wrapper {
+    text-align: center;
   }
 }
