--- a/src/scss/Includes/utils/_typography.scss
+++ b/src/scss/Includes/utils/_typography.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Dosis|Open+Sans");
+
 .bat-heading {
   margin: 0;
   padding: $padding-l 0;
@@ -21,9 +23,9 @@
   }
 }
 
-.bat-content{
+.bat-content {
   font-family: $font-primary;
-  font-size: $font-size-s; 
+  font-size: $font-size-s;
   margin: 0;
   color: $dove-grey;
-} 
+}
